# PolyPlugin

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml  main.yml
PolyPlugin/: CMakeLists.txt
PolyPlugin/CalculatorPlugin/: CMakeLists.txt
PolyPlugin/CalculatorPlugin/src/: Plugin.cpp
PolyPlugin/CalculatorPluginAPI/: CMakeLists.txt
PolyPlugin/CalculatorPluginAPI/src/: AddIntent.i  CalculatorPluginSWIG.i  RouterHelper.hpp  SubstractIntent.hpp
PolyPlugin/PolyPlugin/: CMakeLists.txt
PolyPlugin/PolyPlugin/src/pp/: Handler.hpp  IntentInfo.hpp  IntentRouter.hpp  PluginInfo.hpp  PluginsContainer.hpp  PolyPluginSWIG.i  ReceiversCollection.hpp
PolyPlugin/TestApp/src/: Main.cpp
PolyPlugin/config/: CmakeConfig.hpp.in
PolyPlugin/src/pp/: Common.hpp  Defines.hpp  FunctionsCollection.hpp  Info.hpp  PluginWrapper.hpp  PluginsContainer.hpp  PluginsLoader.hpp  PolyPlugin.hpp  Router.hpp
Test/CalculatorPlugin/src/: Plugin.cpp
Test/CalculatorPluginAPI/: CMakeLists.txt
Test/CalculatorPluginAPI/src/: AddIntent.hpp
Test/TestApp/: CMakeLists.txt
Test/TestApp/src/: Main.cpp
