# Include dir
set(CALCULATOR_PLUGIN_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# Source files list
file(GLOB_RECURSE CALCULATOR_PLUGIN_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${CALCULATOR_PLUGIN_INCLUDE}/*.cpp 
    ${CALCULATOR_PLUGIN_INCLUDE}/*.hpp 
    ${CALCULATOR_PLUGIN_INCLUDE}/*.h)
GenerateSourceGoups("${CALCULATOR_PLUGIN_SRCS}")

add_library(${CALCULATOR_PLUGIN_TARGET} SHARED ${CALCULATOR_PLUGIN_SRCS})
target_include_directories(${CALCULATOR_PLUGIN_TARGET} PRIVATE ${CALCULATOR_PLUGIN_INCLUDE})

target_link_libraries(${CALCULATOR_PLUGIN_TARGET} PRIVATE ${CALCULATOR_PLUGIN_API_TARGET})