# Include dir
set(CALCULATOR_PLUGIN_API_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# SWIG interface files
file(GLOB_RECURSE CALCULATOR_PLUGIN_API_SWIG_INTERFACE_FILES RELATIVE ${CMAKE_CURRENT_LIST_DIR}
     ${CALCULATOR_PLUGIN_API_INCLUDE}/*.i)
GenerateSourceGoups("${CALCULATOR_PLUGIN_API_SWIG_INTERFACE_FILES}")

# Source files list
file(GLOB_RECURSE CALCULATOR_PLUGIN_API_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${CALCULATOR_PLUGIN_API_INCLUDE}/*.cpp 
    ${CALCULATOR_PLUGIN_API_INCLUDE}/*.hpp 
    ${CALCULATOR_PLUGIN_API_INCLUDE}/*.h)
GenerateSourceGoups("${CALCULATOR_PLUGIN_API_SRCS}")



add_library(${CALCULATOR_PLUGIN_API_TARGET} INTERFACE)
add_custom_target(${CALCULATOR_PLUGIN_API_TARGET}_ SOURCES 
    ${CALCULATOR_PLUGIN_API_SRCS}
    ${CALCULATOR_PLUGIN_API_SWIG_INTERFACE_FILES})

target_include_directories(${CALCULATOR_PLUGIN_API_TARGET} INTERFACE ${CALCULATOR_PLUGIN_API_INCLUDE})

target_link_libraries(${CALCULATOR_PLUGIN_API_TARGET} INTERFACE ${POLYPLUGIN_TARGET})


foreach(Source ${CALCULATOR_PLUGIN_API_SWIG_INTERFACE_FILES})
	get_filename_component(SourceName ${Source} NAME_WE)
    SET_SOURCE_FILES_PROPERTIES(${Source} PROPERTIES CPLUSPLUS ON)

    swig_add_library(${SourceName} LANGUAGE python SOURCES ${Source})

    swig_link_libraries(${SourceName} ${PYTHON_LIBRARIES})
    target_link_libraries(${SourceName} ${CALCULATOR_PLUGIN_API_TARGET})
    target_link_libraries(${SourceName} ${POLYPLUGIN_TARGET})
endforeach()