# Include dir
set(POLYPLUGIN_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# Source files list
file(GLOB_RECURSE POLYPLUGIN_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${POLYPLUGIN_INCLUDE}/*.cpp 
    ${POLYPLUGIN_INCLUDE}/*.hpp 
    ${POLYPLUGIN_INCLUDE}/*.h)
GenerateSourceGoups("${POLYPLUGIN_SRCS}")

add_library(${POLYPLUGIN_TARGET} INTERFACE)
add_custom_target(${POLYPLUGIN_TARGET}_ SOURCES ${POLYPLUGIN_SRCS})
target_include_directories(${POLYPLUGIN_TARGET} INTERFACE ${POLYPLUGIN_INCLUDE})