# Include dir
set(CALCULATOR_PLUGIN_API_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# Source files list
file(GLOB_RECURSE CALCULATOR_PLUGIN_API_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${CALCULATOR_PLUGIN_API_INCLUDE}/*.cpp 
    ${CALCULATOR_PLUGIN_API_INCLUDE}/*.hpp 
    ${CALCULATOR_PLUGIN_API_INCLUDE}/*.h)
GenerateSourceGoups("${CALCULATOR_PLUGIN_API_SRCS}")

add_library(${CALCULATOR_PLUGIN_API_TARGET} INTERFACE)
add_custom_target(${CALCULATOR_PLUGIN_API_TARGET}_ SOURCES ${CALCULATOR_PLUGIN_API_SRCS})
target_include_directories(${CALCULATOR_PLUGIN_API_TARGET} INTERFACE ${CALCULATOR_PLUGIN_API_INCLUDE})

target_link_libraries(${CALCULATOR_PLUGIN_API_TARGET} INTERFACE ${POLYPLUGIN_TARGET})